Polished and tested more efficient error handling. Added various functions to the DataAccessToolkit() class, as well as wrote out an efficient working example of using this library for polygon.io API access. Added advanced parameter exists and type checking on all methods. Added handling of improper or non existent file extensions.

--- a/python/api_libs/file_paths.yaml
+++ b/python/api_libs/file_paths.yaml
@@ -1,7 +1,8 @@
 ---
 
 api_files: 
-  request_parameters: "/home/brandenk/Documents/programming/large/auto_trader/python/api_libs/api_parameters/request_parameters.yaml"
-  api_export: "/home/brandenk/Documents/programming/large/auto_trader/python/api_libs/api_parameters/"
+  request_parameters: "/home/brandenk/Documents/programming/large/auto_trader/python/api_libs/program_files/request_parameters.yaml"
+  api_export: "/home/brandenk/Documents/programming/large/auto_trader/python/api_libs/polygon_data/"
 
-program_files: 
+program_files:
+  settings: "/home/brandenk/Documents/programming/large/auto_trader/python/api_libs/program_files/settings.yaml"
